[package]
name = "t-port"
version = "1.0.0"
edition = "2024"
authors = ["SirCesarium"]
description = "A lightweight L4 protocol multiplexer with zero-copy routing."
license = "MIT"
repository = "https://github.com/sircesarium/t-port"
homepage = "https://github.com/sircesarium/t-port"
documentation = "https://docs.rs/t-port"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "tp"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"